<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:background="@android:color/background_light">

    <!--Odometer-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/odometer_reading"
            android:inputType="number"
            android:digits="0123456789"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_odometer_reading"
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

    <!--Trip Distance-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/trip_distance"
            android:inputType="number"
            android:digits="0123456789."
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_trip_distance"
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

    <!--Octane-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fuel_octane"
            android:inputType="number"
            android:digits="123789"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_octane"
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

    <!--Brand-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fuel_brand"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_fuel_brand"
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

    <!--Price-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fuel_price"
            android:inputType="number"
            android:digits="0123456789."
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_fuel_price"
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

    <!--Gallons-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/gallons_filled"
            android:inputType="number"
            android:digits="0123456789."
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_gallons"
            android:imeOptions="actionDone"/>

    </android.support.design.widget.TextInputLayout>

</LinearLayout>