<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/my_results_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:elevation="36dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:theme="@style/AppTheme"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            >

            <!-- Efficiency -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/efficiency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25.6"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" MPG"
                    android:textColor="@color/primary_text"
                    android:textSize="24sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider_color"/>

            <!-- Fuel Costs -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cost/100 miles:"
                    android:textColor="@color/secondary_text"/>

                <TextView
                    android:id="@+id/hundred_mile_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$8.97"
                    android:textColor="@color/secondary_text"/>
            </LinearLayout>

            <!-- Trip Distance -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:textColor="@color/secondary_text"/>

                <TextView
                    android:id="@+id/trip_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 209.5"
                    android:textColor="@color/secondary_text"/>

            </LinearLayout>

            <!-- Fuel Costs -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/volume"
                    android:textColor="@color/secondary_text"/>

                <TextView
                    android:id="@+id/volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 9.64"
                    android:textColor="@color/secondary_text"/>
            </LinearLayout>

            <!-- Fuel Info -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fuel: "
                    android:textColor="@color/secondary_text"/>

                <TextView
                    android:id="@+id/fuel_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Shell, "
                    android:textColor="@color/secondary_text"/>

                <TextView
                    android:id="@+id/fuel_octane"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="91 octane"
                    android:textColor="@color/secondary_text"/>
            </LinearLayout>

            <!-- Fuel Price -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/secondary_text"/>

                <TextView
                    android:id="@+id/fuel_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2.59"
                    android:textColor="@color/secondary_text"/>
            </LinearLayout>

            <!-- Odometer -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/odometer"
                    android:textColor="@color/secondary_text"/>

                <TextView
                    android:id="@+id/odometer_reading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 3255"
                    android:textColor="@color/secondary_text"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="-10.5%"
            android:textColor="@color/black"
            android:textSize="24sp"/>

    </android.support.v7.widget.CardView>

</LinearLayout>