<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/trip_card"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        android:background="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Fuel Info-->
            <LinearLayout
                android:layout_alignParentStart="true"
                android:id="@+id/layout_fuel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fuel: "/>

                <TextView
                    style="@style/AppText"
                    android:id="@+id/fuel_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Shell, "/>

                <TextView
                    style="@style/AppText"
                    android:id="@+id/fuel_octane"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="91"/>

            </LinearLayout>

            <!--Fuel Price-->
            <LinearLayout
                android:layout_below="@id/layout_fuel"
                android:id="@+id/layout_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"/>

                <TextView
                    style="@style/AppText"
                    android:id="@+id/fuel_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2.59"/>

            </LinearLayout>

            <!--Odometer-->
            <LinearLayout
                android:id="@+id/layout_odo"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppText"
                    android:text="@string/odometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/AppText"
                    android:id="@+id/odometer_reading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3255"/>

            </LinearLayout>


            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--Efficiency-->
                <LinearLayout
                    android:id="@+id/layout_efficiency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/LargeBoldText"
                        android:id="@+id/efficiency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="25.6 "/>

                    <TextView
                        style="@style/LargeBoldText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text=" MPG"/>

                </LinearLayout>

                <TextView
                    style="@style/PercentageText"
                    android:id="@+id/percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="-10.5%"/>

            </LinearLayout>

            <!--Trip Distance-->
            <LinearLayout
                android:layout_alignParentEnd="true"
                android:id="@+id/layout_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppText"
                    android:text="@string/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/AppText"
                    android:id="@+id/trip_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="209.5"/>

            </LinearLayout>

            <!--Volume-->
            <LinearLayout
                android:layout_alignParentEnd="true"
                android:layout_below="@id/layout_trip"
                android:id="@+id/layout_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppText"
                    android:id="@+id/volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9.64"/>

                <TextView
                    style="@style/AppText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" gallons"/>

            </LinearLayout>

            <!--Hundred Miles-->
            <LinearLayout
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppText"
                    android:text="Cost/100 miles: "
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/AppText"
                    android:id="@+id/hundred_mile_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$8.97"/>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>